# hw_django-online-store

./: .gitignore  README.md  data.json  pyproject.toml
config/: settings.py  urls.py
main/: models.py  urls.py  views.py
main/feedbacks/: feedback.txt
main/management/commands/: filldb.py
main/migrations/: 0001_initial.py  0002_contact_alter_product_image.py  0003_blogpost.py  0004_alter_blogpost_slug.py
main/templates/main/: base.html  blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html  contacts.html  index.html  product.html  product_detail.html  product_list.html
main/templates/main/include/: menu.html
users/templates/users/: login.html
